test/expected/declare_0f_v-c.out
declare f as pure virtual function returning void
                  ^
19: syntax error: "virtual" not supported in C
